Validaton + Aop + General Refactoring

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "TokenOptions": {
+    "Audience ": "www.talha.com",
+    "Issuer": "www.talha.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "167308"
+
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
